# Packaging-Cost-Estimation-Tool

./: .gitignore  .pylintrc  README.md  pyproject.toml  start_app.bat  start_app.py
.github/workflows/: ci.yml
src/cli/: run_app.py  visualization_cli.py
src/core/: train_multi_input.py  validate_multi_input.py
src/experiments/: MPP_EPE_regression.py  datapoint_MPP_EPE_YFY.py  datapoint_MPP_EPE_d14_sealed_air.py  datapoint_corrugate_d14_YFY.py  datapoint_corrugate_d14_sealed_air.py  datapoint_corrugate_d15_YFY.py  simple_cost_estimation.py  simple_cost_estimation_streamlit.py
src/models/: regression.py  svr.py
src/pages/: estimate_page.py  freight_upload_page.py  train_validate_page.py  upload_page.py
src/utils/: config.py  data_loader.py  lang.py  model_predictor.py  utils.py
tests/: test_data_loader.py  test_model_predictor.py  test_train.py
