[project]
name = "cost-estimation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "openai (>=1.93.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "core", from = "src"}]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
taskipy = "^1.14.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
poethepoet = "^0.36.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "src.core.train:main"
validate = "src.core.validate:main"
visualization = "src.cli.visualization_cli:main"
train_svr = "src.core.train_svr:main"
validate_svr = "src.core.validate_svr:main"

[tool.poe.tasks]
test = "pytest tests/"
format = "black src/"
isort = "isort src/"

